--- a/site/training/what-is-validmind/what-is-validmind-register.qmd
+++ b/site/training/what-is-validmind/what-is-validmind-register.qmd
@@ -44,7 +44,7 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 
 ::: {.w-50-ns .pa3 .tr}
 
-[register](#register){.button-green .cta}
+[Start the tour {{< fa arrow-right >}}](what-is-validmind.html){.button-green .cta}
 :::
 
 ::::
@@ -67,7 +67,7 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 
 :::
 
-{{< include /training/_training-register.qmd >}}
+<!-- {{< include /training/_training-register.qmd >}} -->
 
 <span id="feedback-help"></span>
 
