--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -36,7 +36,7 @@ skip_preview: true
 :::: {.columns}
 
 ::: {.column width="30%" .pr4 .nt5}
-[Contents]{.smallcaps .f1 .b}
+[How do I<br>use ...?]{.smallcaps .f1 .b}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .nt5}
