--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -87,7 +87,7 @@ To rename the field keys for custom inventory fields:
 
 {{< include /guide/model-inventory/_rename-field-keys.qmd >}}
 
-#### Inventory field types testing
+#### Inventory field types
 
 {{< include /guide/model-inventory/_field-types.qmd >}}
 
