--- a/site/guide/model-validation/manage-artifact-fields.qmd
+++ b/site/guide/model-validation/manage-artifact-fields.qmd
@@ -102,7 +102,7 @@ To group artifact fields, first create an artifact field group:
 
 4. Click **Create Group** to add the new group.
 
-5. Assign the desired fields to the group.[^9]
+5. Assign the desired fields to the group.[^8qr]
 
 ## Delete artifact fields
 
@@ -141,6 +141,4 @@ To group artifact fields, first create an artifact field group:
 
 [^7]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^8]: [Manage artifact types](manage-artifact-types.qmd)
-
-[^9]: [Add or edit artifact fields](#add-or-edit-artifact-fields)
+[^8]: [Add or edit artifact fields](#add-or-edit-artifact-fields)
