--- a/site/guide/model-inventory/_field-types.qmd
+++ b/site/guide/model-inventory/_field-types.qmd
@@ -11,7 +11,7 @@ Attachments
 
 :::: {.content-visible when-format="html" when-meta="includes.artifacts"}
 Attachments
-: Upload supporting files for your finding.^[[Manage supporting documentation](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation)] Files must be less than 50 MB each in size.
+: Upload supporting files for your artifact.^[[Manage supporting documentation](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation)] Files must be less than 50 MB each in size.
 ::::
 
 Calculation
@@ -207,7 +207,7 @@ User
 
 :::: {.content-hidden unless-format="revealjs"}
 Attachments
-: Upload supporting files for your [model](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation){target="_blank"} or [finding](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation){target="_blank"}. Files must be less than 50 MB each in size.
+: Upload supporting files for your [model](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation){target="_blank"} or [artifact](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation){target="_blank"}. Files must be less than 50 MB each in size.
 
 Calculation <span id="calculation"></span> 
 : Define a `formula(params)` function that automatically calculates and returns a value based on the params dictionary, which includes selected custom field keys retrieved from your other inventory model fields.
