--- a/site/guide/model-validation/manage-artifact-fields.qmd
+++ b/site/guide/model-validation/manage-artifact-fields.qmd
@@ -102,7 +102,7 @@ To group artifact fields, first create an artifact field group:
 
 4. Click **Create Group** to add the new group.
 
-5. Assign the desired fields to the group.[^8qr]
+5. Assign the desired fields to the group.[^8]
 
 ## Delete artifact fields
 
