--- a/site/guide/model-inventory/_field-types.qmd
+++ b/site/guide/model-inventory/_field-types.qmd
@@ -2,7 +2,7 @@
 See the LICENSE file in the root of this repository for details.
 SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial -->
 
-:::: {.content-visible when-format="revealjs"}
+:::: {.content-visible unless-format="revealjs"}
 
 :::: {.content-visible when-format="html" when-meta="includes.inventory"}
 Attachments
@@ -19,7 +19,7 @@ Calculation
 
 :::: {.content-visible when-format="html" when-meta="includes.inventory"}
 1. Select from the drop-down of **[available model fields]{.smallcaps}** to allow your formula access to the field's values.^[Fields are grouped by field type.]
-2. Replace the demonstration formula with your own in the code box provided.[^calculation-field-complexity]
+2. Replace the demonstration formula with your own in the code box provided.^[**Stick to basic operations**.<br>Keep your code simple and avoid complex logic and imports.]
 4. Click **Test Calculation {{< fa angle-down >}}** to open the testing area.
 5. Enter in sample values in the testing area then click **{{< fa play >}} Test Calculation** to validate your formula.
 <br><br>
@@ -61,7 +61,7 @@ You want a calculated field that automatically returns a risk score based on  `m
 
 :::: {.content-visible when-format="html" when-meta="includes.artifacts"}
 1. Select from the drop-down of **[available artifact fields]{.smallcaps}** to allow your formula access to the field's values.^[Fields are grouped by field type.]
-2. Replace the demonstration formula with your own in the code box provided.
+2. Replace the demonstration formula with your own in the code box provided.^[**Stick to basic operations**.<br>Keep your code simple and avoid complex logic and imports.]
 4. Click **Test Calculation {{< fa angle-down >}}** to open the testing area.
 5. Enter in sample values in the testing area then click **{{< fa play >}} Test Calculation** to validate your formula.
 <br><br>
@@ -193,15 +193,6 @@ User
 - Select list pre-populated with users from your {{< fa book-open >}} User Directory.^[[Manage users](/guide/configuration/manage-users.qmd)]
 - Toggle [allow linking to multiple records]{.smallcaps} on to allow multi-selection of users.
 
-<!-- ADDITIONAL FOOTNOTES -->
-
-[^calculation-field-complexity]:
-
-    ::: {.callout title="Stick to basic operations."}
-    Keep your code simple and avoid complex logic and imports.
-
-    :::
-
 ::::
 
 
@@ -209,10 +200,10 @@ User
 Attachments
 : Upload supporting files for your [model](/guide/model-inventory/edit-model-inventory-fields.qmd#manage-supporting-documentation){target="_blank"} or [artifact](/guide/model-validation/add-manage-artifacts.qmd#manage-supporting-documentation){target="_blank"}. Files must be less than 50 MB each in size.
 
-Calculation <span id="calculation"></span> 
+Calculation
 : Define a `formula(params)` function that automatically calculates and returns a value based on the params dictionary, which includes selected custom field keys retrieved from your other inventory model fields.
 
-    1. Select from the drop-down of **[available model fields]{.smallcaps}** or **[available artifact fields]{.smallcaps}** to allow your formula access to the field's values.^[Fields are grouped by field type.]
+    1. Select from the drop-down of **[available model fields]{.smallcaps}** or **[available artifact fields]{.smallcaps}** to allow your formula access to the field's values.
     2. Replace the demonstration formula with your own in the code box provided.
     4. Click **Test Calculation {{< fa angle-down >}}** to open the testing area.
     5. Enter in sample values in the testing area then click **{{< fa play >}} Test Calculation** to validate your formula.
