--- a/site/guide/model-inventory/_field-types.qmd
+++ b/site/guide/model-inventory/_field-types.qmd
@@ -60,7 +60,7 @@ Your calculated field is grouped under `Model Risk` inventory fields, and can on
 ::::
 
 :::: {.content-visible when-format="html" when-meta="includes.artifacts"}
-1. Select from the drop-down of **[available artifact fields]{.smallcaps}** and **[model fields available via `params.model`]{.smallcaps}** to allow your formula access to the field's values.^[Fields are grouped by field type.]
+1. Select from the drop-down of **[available artifact fields]{.smallcaps}** and **[model fields available via]{.smallcaps} `params.model`** to allow your formula access to the field's values.^[Fields are grouped by field type.]
 2. Replace the demonstration formula with your own in the code box provided.^[**Stick to basic operations**.<br>Keep your code simple and avoid complex logic and imports.]
 4. Click **Test Calculation {{< fa angle-down >}}** to open the testing area.
 5. Enter in sample values in the testing area then click **{{< fa play >}} Test Calculation** to validate your formula.
@@ -203,7 +203,7 @@ Attachments
 Calculation
 : Define a `formula(params)` function that automatically calculates and returns a value based on the params dictionary, which includes selected custom field keys retrieved from your other inventory model fields.
 
-    1. Select from the drop-down of **[available model fields]{.smallcaps}** (model inventory fields), or **[available artifact fields]{.smallcaps}** and **[model fields available via `params.model`]{.smallcaps}** (artifact fields) to allow your formula access to the field's values.
+    1. Select from the drop-down of **[available model fields]{.smallcaps}** (model inventory fields), or **[available artifact fields]{.smallcaps}** and **[model fields available via]{.smallcaps} `params.model`** (artifact fields) to allow your formula access to the field's values.
     2. Replace the demonstration formula with your own in the code box provided.
     4. Click **Test Calculation {{< fa angle-down >}}** to open the testing area.
     5. Enter in sample values in the testing area then click **{{< fa play >}} Test Calculation** to validate your formula.
