--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -89,7 +89,7 @@ skip_preview: true
 :::
 
 ::: {.column width="60%" .f2 .pl2 .pr2}
-ValidMind offers a platform to [register items]{.highlight .b}, maintain [a comprehensive inventory]{.highlight .b}, and implement [risk-based classification]{.highlight .b} to support effective governance.
+ValidMind offers a platform to [register items]{.highlight .b}, maintain [a customizable inventory]{.highlight .b}, and implement [risk-based classification]{.highlight .b} to support effective governance.
 :::
 
 ::::
